tests/bad/this_outside_class.td
/// fail: Cannot use `this` outside of a class

this = 5
